k8s/server-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: server-deploymnet
spec:
  replicas: 1
  selector: 
    matchLabels: 
      component: server
  template:
    metadata:
      labels:
        component: server
    spec:
      containers:
        - name: server
          image: shakilakamalasena/multi-server
          ports:
            - containerPort: 5000
